<resources>
    <string name="app_name">Composition</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="title">Состав числа</string>
    <string name="title_game_rules">Правила игры:</string>
    <string name="game_rules_description">Перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.</string>
    <string name="example_title">Пример:</string>
    <string name="example_description">В верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="understand">Понятно</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="question_mark">\?</string>
    <string name="right_answers">Правильных ответов %s из %s необходиымх</string>
    <string name="required_answers">Необходимое к-во правильных ответов: %s</string>
    <string name="game_over">Game over</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="try_again">Поробовать снова</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
</resources>