<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="gameResult"
            type="com.gmail.serhiiromanchuk.composition.domain.entity.GameResult" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.GameFinishedFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/emoji_result"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_margin="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/game_over"
            app:emojiResult="@{gameResult.winner}"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_smile"/>

        <TextView
            android:id="@+id/tv_required_answers"
            style="@style/ContentTextStyle"
            android:layout_marginTop="36dp"
            app:requireAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/emoji_result"
            tools:text="@string/required_answers"/>

        <TextView
            style="@style/TextSubTitleStyle"
            android:id="@+id/tv_score_answers"
            android:layout_marginTop="6dp"
            app:scoreAnswers="@{gameResult.countOfRightAnswers}"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_answers"
            tools:text="@string/score_answers"/>

        <TextView
            style="@style/ContentTextStyle"
            android:id="@+id/tv_required_percentage"
            android:layout_marginTop="24dp"
            app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_answers"
            tools:text="@string/required_percentage"/>

        <TextView
            android:id="@+id/tv_score_percentage"
            style="@style/TextSubTitleStyle"
            android:layout_marginTop="6dp"
            app:scorePercentage="@{gameResult.percentOfRightQuestion}"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
            tools:text="@string/score_percentage"/>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/button_retry"
            android:text="@string/try_again"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>